# dynamic-giggle

./: CMakeLists.txt  README.md
include/: DynamicGiggle.hpp
src/: DynamicGiggle.cpp
